added stats and rate limiting

--- a/config.json
+++ b/config.json
@@ -1,1 +1,14 @@
-{}
+{
+	"server":{
+		"twitter":{
+			"username":"ryandick",
+			"password":"D1z4yd1ck"
+		},
+		"latlngLimit":250
+	},
+	"hooks":{
+		"stats":{
+			"procLimit":500
+		}
+	}
+}
