--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "globaltwit",
-  "version": "0.0.0",
+  "version": "0.1.5",
   "description": "twitter posts visualised on globeGL",
-  "main": "index.js",
+  "main": "server/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,5 +11,14 @@
     "url": "git@bitbucket.org:ryandick/globaltwit.git"
   },
   "author": "Ryan Dick",
-  "license": "BSD"
+  "license": "BSD",
+  "dependencies": {
+    "json-line-protocol": "0.0.3",
+    "ntwitter": "~0.5.0",
+    "underscore": "~1.3.3",
+    "mongolian": "~0.1.18",
+    "express": "~2.5.11",
+    "socket.io": "~0.9.10",
+    "hook.io": "~0.8.11"
+  }
 }
