--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "license": "BSD",
   "dependencies": {
     "json-line-protocol": "*",
-    "underscore": "*",
+    "underscore": "~1.3.3",
     "mongolian": "*",
     "express": "2.x",
     "socket.io": "*",
