--- a/config.json
+++ b/config.json
@@ -11,7 +11,8 @@
 		},
 		"tracer": {
 				"port": 7000,
-				"enabled": true
+				"enabled": true,
+				"host":"0.0.0.0"
 			}
 	},
 	"hooks": {
@@ -24,7 +25,8 @@
 			},
 			"tracer": {
 				"port": 7700,
-				"enabled": true
+				"enabled": true,
+				"host":"0.0.0.0"
 			}
 		},
 		"db": {
@@ -32,7 +34,8 @@
 			"port": 8011,
 			"tracer": {
 				"port": 7701,
-				"enabled": true
+				"enabled": true,
+				"host":"0.0.0.0"
 			}
 		},
 		"wordlist": {
@@ -42,7 +45,8 @@
 			},
 			"tracer": {
 				"port": 7702,
-				"enabled": true
+				"enabled": true,
+				"host":"0.0.0.0"
 			}
 		}
 	}
