added stats to db save hook

--- a/config.json
+++ b/config.json
@@ -11,21 +11,21 @@
 		},
 		"tracer": {
 				"port": 7000,
-				"enabled": true,
+				"enabled": false,
 				"host":"0.0.0.0"
 			}
 	},
 	"hooks": {
 		"stats": {
 			"debug": false,
-			"procLimit": 500,
+			"rateLimit": 500,
 			"port": 8010,
 			"sink": {
 				"port": 8020
 			},
 			"tracer": {
 				"port": 7700,
-				"enabled": true,
+				"enabled": false,
 				"host":"0.0.0.0"
 			}
 		},
@@ -34,7 +34,7 @@
 			"port": 8011,
 			"tracer": {
 				"port": 7701,
-				"enabled": true,
+				"enabled": false,
 				"host":"0.0.0.0"
 			}
 		},
@@ -45,7 +45,7 @@
 			},
 			"tracer": {
 				"port": 7702,
-				"enabled": true,
+				"enabled": false,
 				"host":"0.0.0.0"
 			}
 		}
